fixed firefox issue on favorites index and fixed priority btn overflow issue on booth page

--- a/app/assets/stylesheets/pages/_booth-show.scss
+++ b/app/assets/stylesheets/pages/_booth-show.scss
@@ -82,7 +82,8 @@
   box-shadow:
     0 10px 20px rgba(9, 11, 36, 0.12),
     0 4px 10px rgba(9, 11, 36, 0.08);
-  overflow: hidden;
+  // temporary fix to the priority dropdown overflow issue
+  // overflow: hidden;
   color: $deep-navy;
 }
 
